fix(side-menu): align styles with figma design

--- a/packages/core/src/components/side-menu/side-menu-item/side-menu-item-global.scss
+++ b/packages/core/src/components/side-menu/side-menu-item/side-menu-item-global.scss
@@ -1,7 +1,3 @@
-.__tds-side-menu-item-icon {
-  margin-left: -4px; // makes left padding 20px if there is an icon
-}
-
 .__tds-side-menu-item-icon-collapsed {
   color: var(--tds-sidebar-side-menu-single-item-color);
   margin-left: 0;
